kubernetes/main/apps/home/homepage/app/networkpolicy.yaml
---
# yaml-language-server: $schema=https://kubernetes-schemas.pages.dev/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: homepage
  namespace: home
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/name: homepage
  ingress:
    - fromEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/name: traefik
            app.kubernetes.io/instance: traefik-networking
      toPorts:
        - ports:
            - port: "3000"
              protocol: TCP
  egress:
    # gethomepage ingress/pod discovery
    - toEntities:
        - kube-apiserver
    # widgets query apps via ingress hostnames hairpinning traefik
    - toEndpoints:
        - matchLabels:
            io.kubernetes.pod.namespace: networking
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "8443"
              protocol: TCP
    - toEntities: ["world"]
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
